# rust-raspberrypi

./: .ycm_extra_conf.py  Cargo.toml  Makefile
src/: bsp.rs  console.rs  cpu.rs  driver.rs  main.rs  memory.rs  panic_wait.rs  print.rs  runtime_init.rs  synchronization.rs
src/_arch/aarch64/: cpu.S  cpu.rs
src/_arch/aarch64/cpu/: smp.rs
src/bsp/: device_driver.rs  raspberrypi.rs
src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
src/bsp/raspberrypi/: console.rs  cpu.rs  driver.rs  link.ld  memory.rs
src/cpu/: smp.rs
