[package]
name = "kernel"
version = "0.1.0"
authors = ["Goran Peretin <goran.peretin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bsp_rpi3 = ["cortex-a", "register"]
bsp_rpi4 = ["cortex-a", "register"]

[dependencies]
cortex-a = {version = "3.0.x", optional = true}
register = {version = "0.5.x", optional = true}
